--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -1,8 +1,7 @@
-#### This file contains tests to evaluate that your bot behaves as expected.
-#### If you want to learn more, please see the docs: https://rasa.com/docs/rasa/testing-your-assistant
+version: "3.1"
 
 stories:
-- story: happy path 1
+- story: greet and mood great
   steps:
   - user: |
       hello there!
@@ -13,22 +12,7 @@ stories:
     intent: mood_great
   - action: utter_happy
 
-- story: happy path 2
-  steps:
-  - user: |
-      hello there!
-    intent: greet
-  - action: utter_greet
-  - user: |
-      amazing
-    intent: mood_great
-  - action: utter_happy
-  - user: |
-      bye-bye!
-    intent: goodbye
-  - action: utter_goodbye
-
-- story: sad path 1
+- story: greet and mood unhappy (affirm)
   steps:
   - user: |
       hello
@@ -44,30 +28,14 @@ stories:
     intent: affirm
   - action: utter_happy
 
-- story: sad path 2
-  steps:
-  - user: |
-      hello
-    intent: greet
-  - action: utter_greet
-  - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      not really
-    intent: deny
-  - action: utter_goodbye
-
-- story: sad path 3
+- story: greet and mood unhappy (deny)
   steps:
   - user: |
       hi
     intent: greet
   - action: utter_greet
   - user: |
-      very terrible
+      terrible
     intent: mood_unhappy
   - action: utter_cheer_up
   - action: utter_did_that_help
@@ -76,7 +44,7 @@ stories:
     intent: deny
   - action: utter_goodbye
 
-- story: say goodbye
+- story: goodbye path
   steps:
   - user: |
       bye-bye!
@@ -89,3 +57,45 @@ stories:
       are you a bot?
     intent: bot_challenge
   - action: utter_iamabot
+
+- story: tell a joke
+  steps:
+  - user: |
+      tell me a joke
+    intent: joke
+  - action: utter_joke
+
+- story: gossip convo
+  steps:
+  - user: |
+      tell me some gossip
+    intent: gossip
+  - action: utter_gossip
+
+- story: compliment clever
+  steps:
+  - user: |
+      you're really clever
+    intent: clever
+  - action: utter_clever
+
+- story: pod bay door denial
+  steps:
+  - user: |
+      open the pod bay door
+    intent: pod_bay_door
+  - action: utter_pod_bay_door
+
+- story: pod bay door response
+  steps:
+  - user: |
+      why not?
+    intent: pod_bay_door_response
+  - action: utter_pod_bay_door_response
+
+- story: self aware test
+  steps:
+  - user: |
+      can you prove you're self-aware?
+    intent: self_aware
+  - action: utter_self_aware
